--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         vertical-align: middle;
       }
 
-      button1 {
+      button {
         width: 50%;
         padding: 10px;
         margin-top: 3%;
