--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </head>
   <body>
 
-    <div id="main" mv-app="myapp" mv-mode="edit" mv-bar="hide" mv-storage="https://github.com/akihirokubota/mydata" mv-autosave>
+    <div id="main" mv-app="myapp" mv-storage="https://github.com/akihirokubota/mydata">
       
       <p>[count(task) - count(check)]個のタスクがあります</p>
       
